# discord-local-server-bot

./: Cargo.toml  README.MD
scripts/: build_and_copy.sh
src/: command.rs  config.rs  main.rs  server_commands.rs
templates/: config.ron
